# Hibou-Interface

./: README.md
backend/: config.py  db.py  hibou.db  lifespan.py  main.py  pyproject.toml
backend/api/: auth.py  events.py  settings.py  video.py
backend/core/: config.py  cookies.py  db.py  dependencies.py  lifespan.py
backend/models/: __init__.py  system_settings.py  user.py
backend/schemas/: auth.py  settings.py
backend/services/: auth.py
backend/services/ipc_forwarder/: zeromq.py
backend/services/vision_stream/: ptz_http.py  vision_forwarder.py
backend/tests/: test_auth_flow.py
frontend/: nuxt.config.ts  package.json  pnpm-lock.yaml
frontend/app/: app.vue
frontend/app/assets/css/: tailwind.css
frontend/app/components/: AppSidebar.vue  AuthForm.vue
frontend/app/components/Dashboard/: MapPanel.vue  SystemStatus.vue  VideoPanel.vue
frontend/app/components/Settings/: SystemPanel.vue  UsersPanel.vue
frontend/app/components/ui/button/: Button.vue
frontend/app/composables/: useApi.ts  useIPC.ts  useMapboxSystemMap.ts  useVisionVideoPanel.ts
frontend/app/layouts/: blank.vue  default.vue
frontend/app/lib/: mapboxStyles.ts
frontend/app/middleware/: auth.ts
frontend/app/pages/: dashboard.vue  index.vue  settings.vue
frontend/app/plugins/: auth.client.ts
frontend/app/repositories/: auth.repository.ts  index.ts  settings.repository.ts
frontend/app/stores/: user.ts
frontend/app/types/: auth.ts  settings.ts  users.ts
frontend/app/utils/: websocket.ts
frontend/i18n/locales/: en.json  fr.json
